--- a/main2.html
+++ b/main2.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8' /> 
 <meta name='generator' content='TeX4ht (https://tug.org/tex4ht/)' /> 
 <meta name='viewport' content='width=device-width,initial-scale=1' /> 
-<link href='main.css' type='text/css' rel='stylesheet' /> 
+<link type='text/css' href='main.css' rel='stylesheet' /> 
 <meta name='src' content='main.tex' /> 
 </head><body>
 <p><a id='bookmark'></a></p> <div class='bookmarks'>
