--- a/main2.html
+++ b/main2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html> 
-<html xml:lang='en-US' lang='en-US'> 
+<html lang='en-US' xml:lang='en-US'> 
 <head><title></title> 
 <meta charset='utf-8' /> 
-<meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
-<meta content='width=device-width,initial-scale=1' name='viewport' /> 
-<link href='main.css' type='text/css' rel='stylesheet' /> 
-<meta content='main.tex' name='src' /> 
+<meta name='generator' content='TeX4ht (https://tug.org/tex4ht/)' /> 
+<meta name='viewport' content='width=device-width,initial-scale=1' /> 
+<link href='main.css' rel='stylesheet' type='text/css' /> 
+<meta name='src' content='main.tex' /> 
 </head><body>
 <p><a id='bookmark'></a></p> <div class='bookmarks'>
 </div>
