deploy: a54636a31e44780d990ed650aaeca6b439b86db2

--- a/main2.html
+++ b/main2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
-<html lang='en-US' xml:lang='en-US'> 
+<html xml:lang='en-US' lang='en-US'> 
 <head><title></title> 
 <meta charset='utf-8' /> 
 <meta name='generator' content='TeX4ht (https://tug.org/tex4ht/)' /> 
 <meta name='viewport' content='width=device-width,initial-scale=1' /> 
-<link href='main.css' rel='stylesheet' type='text/css' /> 
+<link rel='stylesheet' type='text/css' href='main.css' /> 
 <meta name='src' content='main.tex' /> 
 </head><body>
 <p><a id='bookmark'></a></p> <div class='bookmarks'>
