--- a/main2.html
+++ b/main2.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8' /> 
 <meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
 <meta content='width=device-width,initial-scale=1' name='viewport' /> 
-<link href='main.css' rel='stylesheet' type='text/css' /> 
+<link rel='stylesheet' href='main.css' type='text/css' /> 
 <meta content='main.tex' name='src' /> 
 </head><body>
 <p><a id='bookmark'></a></p> <div class='bookmarks'>
