--- a/main2.html
+++ b/main2.html
@@ -2,10 +2,10 @@
 <html lang='en-US' xml:lang='en-US'> 
 <head><title></title> 
 <meta charset='utf-8' /> 
-<meta name='generator' content='TeX4ht (https://tug.org/tex4ht/)' /> 
-<meta name='viewport' content='width=device-width,initial-scale=1' /> 
-<link type='text/css' rel='stylesheet' href='main.css' /> 
-<meta name='src' content='main.tex' /> 
+<meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
+<meta content='width=device-width,initial-scale=1' name='viewport' /> 
+<link href='main.css' type='text/css' rel='stylesheet' /> 
+<meta content='main.tex' name='src' /> 
 </head><body>
 <p><a id='bookmark'></a></p> <div class='bookmarks'>
 </div>
